Adds `.idea` folder to `.gitignore`
Excludes the `.idea` folder and associated files from Git tracking.

This prevents project-specific IDE settings and configurations from being accidentally committed, keeping the repository cleaner and avoiding potential conflicts among team members using different IDE configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/[Ii]dea/
 *.log
 
 # MemoryCaptures can get excessive in size.
@@ -69,6 +70,9 @@ crashlytics-build.properties
 
 # Packed Addressables
 /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
+
+# Idea Folder
+*.idea
 
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
